# DSCI_524_team_Cauchy_Kmeans_python

./: .gitignore  CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  Untitled.ipynb  contributors.md  pyproject.toml
.github/workflows/: release.yml
Kmeans_python/: cluster_summary.py  elbow.py  fit.py  predict.py  silhouette.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: Kmeans_python.rst  modules.rst
tests/: test_DSCI_524_team_Cauchy_Kmeans_python.py  test_cluster_summary.py  test_elbow.py  test_fit.py  test_predict.py  test_silhouette.py
