[tool.poetry]
name = "Kmeans_python"
version = "0.1.0"
description = "Python package that implements the k-means algorithm"
authors = ["saurav99 <saurav13iitr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
numpy = "^1.18.1"
altair = "^4.0.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
sphinx = "^2.4.4"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
