[tool.poetry]
name = "Kmeans_python"
version = "0.1.19"
description = "Python package that implements the k-means algorithm"
authors = ["saurav99 <saurav13iitr@gmail.com>"]
license = "MIT"
homepage = "https://github.com/UBC-MDS/Kmeans_python"
repository = "https://github.com/UBC-MDS/Kmeans_python"
documentation = 'https://kmeans-python.readthedocs.io'
packages = [
    { include = "Kmeans_python"},
]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
numpy = "^1.18.1"
altair = "^4.0.1"
scikit-learn = "^0.22.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
sphinx = "^2.4.4"
sphinxcontrib-napoleon = "^0.7"
python-semantic-release = "^4.10.0"

[tool.semantic_release]
version_variable = "Kmeans_python/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
